--- a/src/index.html
+++ b/src/index.html
@@ -11,15 +11,15 @@
   <body>
       <header class="header">
         <div class="header__wrapper">
-          <video preload="auto" autoplay muted loop width="100%"></video>
-          <source src="./video/holding-hands.mp4" type="video/mp4">
+          <!-- <video preload="auto" autoplay muted loop width="100%"></video>
+          <source src="./video/holding-hands.mp4" type="video/mp4"> -->
         </div>
       </header>
       <section class="hero">
         <div class="hero__wrapper">
           <h1 class="hero__title">Level Up</h1>
           <div class="hero__container">
-            <img src="/img/prod.png" alt="Изображение средства для повышения потенции Level Up">
+            <img src="img/prod.png" alt="Изображение средства для повышения потенции Level Up">
           </div>
         </div>
       </section>
