--- a/src/index.html
+++ b/src/index.html
@@ -11,30 +11,34 @@
   <body>
       <header class="header">
         <div class="header__wrapper">
-          <video preload="auto" autoplay="" muted="" loop="" width="100%">
-            <source src="/src/video/abstract.mp4" type="video/mp4">
-          </video>
+            <div class="video">
+              <video class="video__media" preload="auto" autoplay muted loop width="100%" height="auto">
+                <source src="/src/video/abstract.mp4" type="video/mp4">
+                <source src="/src/video/abstract.webm" type="video/webm">
+              </video>
+            </div>
+        <div class="hero container">
+          <div class="hero__wrapper">
+              <h1 class="hero__title">Level Up</h1>
+              <img src="/src/img/prod.png" alt="Изображение средства для повышения потенции Level Up" width="80" height="100">
+            </div>
+          <ul class="hero-list">
+            <li class="hero-list__item">
+              <h2 class="hero-list__title">Номер один в России</h2>
+            </li>
+            <li class="hero-list__item">
+              <h2 class="hero-list__title">Полностью натуральный состав</h2>
+            </li>
+            <li class="hero-list__item">
+              <h2 class="hero-list__title">Нормализует гормональный фон</h2>
+            </li>
+            </ul>
+            <a class="hero-list__button button" href="#">Заказать</a>
         </div>
+      </div>
       </header>
-        <div class="hero__wrapper">
-          <h1 class="hero__title">Level Up</h1>
-          <div class="hero__container">
-            <img src="/src/img/prod.png" alt="Изображение средства для повышения потенции Level Up" width="160" height="210">
-          </div>
-          <ul class="hero__list">
-            <li class="hero__item">
-              <h2 class="hero__title">Всего одна таблеточка и вы во все оружия!</h2>
-            </li>
-            <li class="hero__item">
-              <h2 class="hero__title">Абсолютно безопасен для вашего здоровья, полностью натуральный состав</h2>
-            </li>
-            <li class="hero__item">
-              <h2 class="hero__title">Нормализует гормональный фон</h2>
-            </li>
-            <a class="hero__button button" href="#">Заказать</a>
-        </div>
         <section class="ingredients">
-          <div class="ingredients__wrapper">
+          <div class="ingredients__wrapper container">
             <div class="ingredients-list">
               <div></div>
               <figure class="ingredients-list__item">
@@ -65,11 +69,11 @@
                 <figcaption class="ingredients-list__title">Концентрат Мускатного Ореха</figcaption>
               </figure>
             </div>
-            <a class="hero__button button" href="#">Заказать</a>
+            <a class="ingredients__button button" href="#">Заказать</a>
           </div>
         </section>
         <section class="reviews">
-          <div class="reviews__wrapper">
+          <div class="reviews__wrapper container">
             <ul class="reviews-list">
               <li class="reviews-list__item">
                 <img src="/src/img/man.png" alt="Андрей Паньков" width="80" height="80">
@@ -90,9 +94,38 @@
           </div>
         </section>
         <section class="promo">
-          <div class="promo__wrapper">
+          <div class="promo__wrapper container">
             <img src="/src/img/doctor.png" width="300" height="300" alt="Изображение доктора медицинских наук">
+            <div class="promo-description">
+              <h2 class="promo-description__title">Клинически доказано! Уже 10721 мужчин наслаждаются потрясающим эффектом</h2>
+              <p class="promo-description__text">Увеличение главного мужского гормона гарантировано с каждой неделей. Средство нормализует гормональные процессы в организме, за счет чего активируется сперматогенез, улучшается эрекция и повышается сексуальная выносливость.</p>
+            </div>
+            <ul class="promo-list">
+              <li class="promo-list__item">
+                <h3 class="promo-list__title">Естественная выработка тестостерона</h3>
+              </li>
+              <li class="promo-list__item">
+                <h3 class="promo-list__title">Суперэффективный результат в любом возрасте</h3>
+              </li>
+              <li class="promo-list__item">
+                <h3 class="promo-list__title">Оказывает общеукрепляющее действие, снимает физическую и психологическую усталость</h3>
+              </li>
+            </ul>
+            <a class="promo__button button" href="#">Заказать</a>
           </div>
+        </section>
+        <section class="order">
+          <form class="order-form" action="#" method="post">
+            <div class="order-form__wrapper">
+              <label class="visually-hidden" for="contact-name">Ваше Имя</label>
+              <input class="order-form__input order-form__input--name" type="text" name="contact-name" id="contact-name" placeholder="Ваше Имя">
+            </div>
+            <div class="order-form__wrapper">
+              <label class="visually-hidden" for="contact-tel">Ваше Телефон</label>
+              <input class="order-form__input order-form__input--tel" type="tel" name="contact-tel" id="contact-tel" placeholder="Ваше Телефон">
+            </div>
+          </form>
+          <a class="order__button button" href="#">Заказать</a>
         </section>
       <script src="index.bundle.js"></script>
   </body>
