--- a/src/index.html
+++ b/src/index.html
@@ -311,17 +311,19 @@
         <div class="timer">
           <span class="timer__counter"></span>
         </div>
-        <div class="block-img">
-          <img
-          src="/src/img/prod.png"
-          alt="Изображение средства для повышения потенции Level Up"
-          width="120"
-          height="160"
-        />
-        </div>
-        <div class="order-price">
-          <span class="order-price__old">1359 р.</span>
-          <span class="order-price__new">999 p.</span>
+        <div class="order-row">
+          <div class="block-img">
+            <img
+            src="/src/img/prod.png"
+            alt="Изображение средства для повышения потенции Level Up"
+            width="120"
+            height="160"
+          />
+          </div>
+          <div class="order-price">
+            <span class="order-price__old">1359 р.</span>
+            <span class="order-price__new">999 p.</span>
+          </div>
         </div>
         <form class="order-form" action="#" method="post">
           <div class="order-form__wrapper" data-title="Александр">
