--- a/src/index.html
+++ b/src/index.html
@@ -118,6 +118,7 @@
         </div>
       </header>
       <section class="ingredients">
+        <h2 class="visually-hidden">Состав продукта</h2>
         <div class="ingredients__wrapper container">
           <div class="ingredients-list">
             <div class="col">
@@ -201,6 +202,7 @@
         </div>
       </section>
       <section class="reviews">
+        <h2 class="visually-hidden">Отзывы покупателей</h2>
         <div class="reviews__wrapper container">
           <div class="reviews-list">
             <div class="reviews-list__item">
@@ -288,6 +290,7 @@
         </div>
       </section>
       <section class="promo">
+        <h2 class="visually-hidden">Описание преимуществ продукта</h2>
         <div class="promo__wrapper container">
           <div class="promo__img">
             <img
