--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
           <div class="hero container">
             <div class="hero__wrapper">
               <h1 class="hero__title title">Level Up</h1>
-              <div class="block-img">
+              <div class="block-img hero__img">
                 <img
                   src="src/img/prod.png"
                   alt="Изображение средства для повышения потенции Level Up"
@@ -160,7 +160,7 @@
               <img
                 src="src/img/prod.png"
                 alt="Изображение средства для повышения потенции Level Up"
-                width="150"
+                width="100"
                 height="200"
               />
             </div>
@@ -341,7 +341,7 @@
           </div>
           <div class="order-col">
             <div class="order-row">
-              <div class="block-img">
+              <div class="order__img block-img">
                 <img
                   src="src/img/prod.png"
                   alt="Изображение средства для повышения потенции Level Up"
